--- a/public/style.css
+++ b/public/style.css
@@ -66,7 +66,7 @@ body {
     border-radius: 8px;
     
     overflow: hidden;
-    cursor: pointer;
+    /* cursor: pointer; */
     
     display: flex;
     flex-direction: row;
